# studio

./: .gitignore  Cargo.toml  Dockerfile.linux  README.md  README_RU.md  SECURITY.md  package-lock.json  package.json
.github/workflows/: publish-linux-arm.yml  release.yml
docs/: api.md  api_ru.md
example/ui-placements-demo/: metadata.json
example/ui-placements-demo/frontend/: main.js
notes/: v0.1.0.change_notes.md  v0.2.0.change_notes.md  v0.2.3.change_notes.md
src/: App.css  App.tsx  ColorModeProvider.tsx  i18n.ts  main.tsx  theme.ts
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  desktop-template.desktop  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/infoplist/en.lproj/: InfoPlist.strings
src-tauri/infoplist/ru.lproj/: InfoPlist.strings
src-tauri/scripts/: postinstall.sh  postremove.sh  preinstall.sh  preremove.sh
src-tauri/src/: api.rs  context.rs  db.rs  download.rs  main.rs  system.rs  utils.rs
src-tauri/src/backends/: llama_cpp.rs  llama_links.rs  mod.rs  ollama.rs  ollama_links.rs
src-tauri/src/backends/llama_cpp/: download.rs  models.rs  query.rs  server.rs  setup.rs
src-tauri/src/backends/ollama/: mod.rs  models.rs  query.rs  server.rs
src-tauri/src/plugins/: mod.rs
src/components/: Chat.tsx  NotificationsHost.tsx  Progress.tsx  ProjectsMenu.tsx  PromptBuilder.tsx  Settings.tsx  StatusCard.tsx  SystemMonitor.tsx
src/components/chat/: AttachBar.tsx  InputBar.tsx  LocalModelStatus.tsx  (+1 more)
src/hooks/: usePlugins.ts
src/plugins/: runtime.ts
src/stores/: chatStore.ts  types.ts
src/ui/: notifications.ts
(+24 files in other folders)
