[package]
name = "talkyai"
version = "0.2.3"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ai_assistant_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "^2.7", features = ["devtools"] }
serde = { version = "1", features = ["derive"] }
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
tauri-plugin-process = "2"
tauri-plugin-http = "2"
tauri-plugin-dialog = "2"
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
zip = "4.3"
tokio = { version = "1.0", features = ["full"] }
tempfile = "3.3"
futures = "0.3"
rusqlite = { version = "0.31", features = ["bundled"] }
sysinfo = { version = "0.30" }
flate2 = "1.0"
tar = "0.4"
